# Northstar-bank

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT_GUIDE.md  Dockerfile  FIREBASE_SETUP.md  README.md  accounts-working.html  accounts.html  app.js  auth-firebase.js  auth-simple.js  auth.js  borrow.html  cards-working.html  cards.html  checking.html  dashboard-data.js  dashboard-interactions.js  dashboard-loader-firebase.js  dashboard-loader.js  dashboard-simple.html  dashboard-working.html  dashboard.html  deploy-guide.bat  goals-working.html  goals.html  index.html  invest.html  locations.html  login.html  netlify.toml  package-lock.json  package.json  payments-working.html  payments.html  prequal.html  products.html  replit.md  (+10 more)
backend/: .dockerignore  main.py  pyproject.toml  requirements.txt
css/: critical.css  mobile-responsive.css  page-styles.css  responsive.css  templatemo-style.css
js/: auth.js
