[project]
name = "northstar-bank-api"
version = "0.1.0"
description = "Northstar Bank demo backend: auth (JWT + bcrypt) with SQLite persistence"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.29,<0.31",
    "bcrypt>=4.1,<5",
    "pyjwt>=2.8,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
